# miniOS

./: .gitignore  CMakeLists.txt  main.c  notes.txt
src/io/: io.c  io.h
src/memory/: memory.c  memory.h
src/menu/: menu.c  menu.h
src/process/: process.c  process.h  scenario.c  scenario.h
src/scheduler/: scheduler.c  scheduler.h
src/sync/: mutex.c  mutex.h  semaphore.c  semaphore.h  sync.c  sync.h
src/trace/: logger.c  logger.h  trace.c  trace.h  trace_event_types.h
tools/: cpu_timeline.py  gantt.py  gantt_matplotlib.py  gantt_plotly.py  stats.py
tools/trace/: demo.csv  trace.csv
